# ai_trading_journal

./: .env.example  .gitignore  CLAUDE.md  Home.py  README.md  README.zh-TW.md  Sample_README.md  Sample_README_zh-TW.md  cleanup_docs.sh  database.py  journal-ai.service  journal.nginx.conf  journal.nginx.ssl.conf  journal.sh  main.py  nginx-rate-limit.conf  pyproject.toml  pytest.ini  requirements.txt  run-dev.sh  run_backtest.py  setup-ssl.sh  stop.sh  test_ibkr_flex.py
.specify/memory/: constitution.md
.streamlit/: config.toml
backend/: main.py
config/: constants.py  i18n.py  theme.py
core/: README.md  engine.py
core/analytics/: AutocorrelationTest_statanalyser.py  Base_statanalyser.py  CorrelationTest_statanalyser.py  DistributionTest_statanalyser.py  ReportGenerator_statanalyser.py  SeasonalAnalysis_statanalyser.py  StationarityTest_statanalyser.py  __init__.py
core/automation/: BacktestRunner_autorunner.py  Base_autorunner.py  ConfigLoader_autorunner.py  ConfigSelector_autorunner.py  ConfigValidator_autorunner.py  DataLoader_autorunner.py  MetricsRunner_autorunner.py  (+1 more)
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-TW.md  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  DEPLOYMENT.md  DEPLOYMENT.zh-TW.md  FEATURES_SPECIFICATION.md  FINAL_SUMMARY.md  IBKR_DATA_VALIDATION.md  README.md  TESTING_GUIDE.md  ibkr_flex_query_setup.md  multi-tenant-implementation-plan.md  security-deployment-guide.md
frontend/: next.config.ts  package.json
jobs/: __init__.py  daily_report.py  gateway_sync.py
pages/: 1_Review.py  2_Strategy.py  3_Report_Card.py  4_Strategy_Lab.py  5_Options_Strategy.py  6_GEX_Sentinel.py  6_Portfolio_Advisor.py  7_Help.py  7_Mistake_Cards.py  8_History_AI.py
reports/: EXAMPLE_Market_Analysis.md  README.md
services/: __init__.py  auth_service.py  chat_persistence_service.py  file_service.py  ib_service.py  report_data_service.py
src/database/: db.py
tests/: conftest.py
utils/: __init__.py  ai_coach.py  ai_context_builder.py  ai_strategy_advisor.py  analysis.py  backtest_loader.py  charts.py  data_loader.py  datetime_utils.py  derivatives_support.py  error_handler.py  export.py  floating_chat.py  ibkr_flex_query.py  logger.py  logging_config.py  mfe_mae_calculator.py  option_market_data.py  option_strategies.py  option_strategy_detector.py  pnl_calculator.py  portfolio_cards.py  rate_limiter.py  report_generator.py  styles.py  telegram_notifier.py  validators.py
(+98 files in other folders)
