[project]
name = "ai-trading-journal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "py-vollib>=1.0.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "streamlit>=1.51.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
