[project]
name = "ai-trading-journal"
version = "0.2.0"
description = "AI-powered trading journal with MFE/MAE analysis, trade plans, and notes"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ben Lin" }]
keywords = ["trading", "journal", "ai", "mfe", "mae", "analysis"]
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "black>=25.11.0",
    "certifi>=2025.11.12",
    "curl-cffi>=0.13.0",
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dateparser>=1.2.2",
    "fastapi>=0.121.3",
    "flask>=3.1.2",
    "frozendict>=2.4.7",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "importlib-metadata>=8.7.0",
    "kaleido>=1.2.0",
    "llvmlite>=0.45.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "multitasking>=0.0.12",
    "narwhals>=2.11.0",
    "numba>=0.62.1",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "pandas-stubs>=2.3.2.250926",
    "peewee>=3.18.3",
    "platformdirs>=4.5.0",
    "plotly>=5.17.0",
    "pre-commit>=4.4.0",
    "protobuf>=5.29.5",
    "psutil>=7.1.3",
    "pyarrow>=21.0.0",
    "pycryptodome>=3.23.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-binance>=1.0.32",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "statsmodels>=0.14.5",
    "streamlit>=1.28.0",
    "ta>=0.11.0",
    "tqdm>=4.67.1",
    "types-pytz>=2025.2.0.20251108",
    "types-requests>=2.32.4.20250913",
    "urllib3>=2.5.0",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
    "yfinance>=0.2.28",
    "apscheduler>=3.10,<4.0",
    "ib_insync>=0.9.86",
    "httpx>=0.27.0",
    "nest-asyncio>=1.6.0",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
